# dmarc-report-viewer

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README-Microsoft-365.md  README.md  SECURITY.md  davmail.properties  docker-compose-microsoft365.yml
.github/docker/: Dockerfile
.github/workflows/: ci.yaml
ms-365/: README.md  davmail.properties  docker-compose.yml
screenshots/: screenshots.md
src/: acme_listener.rs  background.rs  cache_map.rs  config.rs  dmarc.rs  dmarc_report.rs  dns_client.rs  dns_client_cached.rs  geolocate.rs  hasher.rs  health_check.rs  http.rs  http_client.rs  imap.rs  mail.rs  main.rs  parser.rs  report.rs  state.rs  summary.rs  tls.rs  tlsrpt.rs  unpack.rs  web_hook.rs  whois.rs  xml_error.rs  xml_file.rs
src/http/: dmarc_reports.rs  ips.rs  mails.rs  metrics.rs  sources.rs  static_files.rs  summary.rs  tls_reports.rs  tlsrpt_reports.rs
testdata/dmarc-reports/: acme.xml  aol.xml  gmxnet.xml  google.xml  hardfail.xml  invalid_casing.xml  mailru.xml  outlook.xml  solamora.xml  webde.xml  yahoo.xml
testdata/smtp-tls-reports/: full-example.json  google.json  microsoft.json  no-contact.json  no-policy.json  no_ip_and_mx.json
testdata/tls-rpt-reports/: rfc-example.json
ui/: chart.umd.4.4.2.min.js  index.html  lit-core.3.1.4.min.js  lit-core.3.3.0.min.js  style.css  style.js  utils.js
ui/components/: about.js  app.js  dashboard.js  dmarc-report-table.js  dmarc-report.js  dmarc-reports.js  mail-table.js  mail.js  mails.js  mailtable.js  problems.js  report.js  reports.js  reporttable.js  sources.js  style.js  tls-report-table.js  tls-report.js  tls-reports.js  tlsrpt-report-table.js  tlsrpt-report.js  tlsrpt-reports.js
