[package]
name = "dmarc-report-viewer"
description = "Standalone DMARC report viewer that fetches input data periodically from an IMAP mailbox"
keywords = ["dmarc", "email"]
categories = ["email"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cry-inc/dmarc-report-viewer"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
anyhow = "1"
flate2 = "1"
sha2 = "0.10"
futures = "0.3"
tracing = "0.1"
base64 = "0.22"
serde_json = "1"
urlencoding = "2"
mailparse = "0.15"
axum-server = "0.7"
tokio-rustls = "0.26"
webpki-roots = "0.26"
tracing-subscriber = "0.3"
serde = {version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
rustls-acme = { version = "0.12", features = ["axum"] }
quick-xml = {version = "0.37", features = ["serialize"] }
tower-http = { version = "0.6", features = ["compression-gzip"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
async-imap = {version = "0.10", default-features = false, features = ["runtime-tokio"] }
