[package]
name = "dmarc-report-viewer"
description = "Standalone DMARC report viewer that fetches input data periodically from an IMAP mailbox"
keywords = ["dmarc", "email"]
categories = ["email"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cry-inc/dmarc-report-viewer"
version = "1.8.0"
edition = "2021"

[dependencies]
axum = "0.8"
anyhow = "1"
flate2 = "1"
sha2 = "0.10"
cron = "0.15"
regex = "1.11"
futures = "0.3"
tracing = "0.1"
base64 = "0.22"
serde_json = "1"
dns-lookup = "2"
urlencoding = "2"
chrono = { version = "0.4.20", features = ["serde"] }
mailparse = "0.16"
tokio-util = "0.7"
webpki-roots = "1"
axum-server = "0.7"
tokio-rustls = "0.26"
http-body-util = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
hyper-util = { version = "0.1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
rustls-acme = { version = "0.13", features = ["axum"] }
quick-xml = {version = "0.37", features = ["serialize"] }
tower-http = { version = "0.6", features = ["compression-gzip"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
async-imap = {version = "0.10", default-features = false, features = ["runtime-tokio"] }
